[gd_scene load_steps=2 format=3 uid="uid://7j4i00qli0xj"]

[ext_resource type="Script" uid="uid://c4ifw0aacb0hw" path="res://main menu/control.gd" id="1_j8dlu"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 638.0
offset_bottom = 365.0
script = ExtResource("1_j8dlu")

[node name="main menu" type="Panel" parent="."]
layout_mode = 0
offset_right = 641.0
offset_bottom = 359.0

[node name="StartButton" type="Button" parent="main menu"]
layout_mode = 0
offset_left = 257.0
offset_top = 107.0
offset_right = 353.0
offset_bottom = 138.0
text = "Start Game"

[node name="OptionsButton" type="Button" parent="main menu"]
layout_mode = 0
offset_left = 256.0
offset_top = 137.0
offset_right = 352.0
offset_bottom = 168.0
text = "Options"

[node name="QuitButton" type="Button" parent="main menu"]
layout_mode = 0
offset_left = 257.0
offset_top = 161.0
offset_right = 349.0
offset_bottom = 201.0
text = "Quit"

[node name="QuitConfirm" type="ConfirmationDialog" parent="main menu"]
oversampling_override = 1.0

[node name="start menu" type="Panel" parent="."]
layout_mode = 0
offset_right = 641.0
offset_bottom = 365.0

[node name="NewGameButton" type="Button" parent="start menu"]
layout_mode = 0
offset_left = 79.0
offset_top = 252.0
offset_right = 175.0
offset_bottom = 287.0
text = "New Game"

[node name="LoadGameButton" type="Button" parent="start menu"]
layout_mode = 0
offset_left = 509.0
offset_top = 262.0
offset_right = 605.0
offset_bottom = 293.0
text = "Load Game"

[node name="DeleteSlotButton" type="Button" parent="start menu"]
layout_mode = 0
offset_left = 514.0
offset_top = 98.0
offset_right = 628.0
offset_bottom = 152.0
text = "Choose A Slot 
to Delete"

[node name="BackButton" type="Button" parent="start menu"]
layout_mode = 0
offset_left = 29.0
offset_top = 25.0
offset_right = 109.0
offset_bottom = 55.0
text = "<- Back"

[node name="Slot 1 button" type="Button" parent="start menu"]
layout_mode = 0
offset_left = 150.0
offset_top = 43.0
offset_right = 498.0
offset_bottom = 74.0
text = "slot 1"

[node name="Slot 2 button" type="Button" parent="start menu"]
layout_mode = 0
offset_left = 149.0
offset_top = 73.0
offset_right = 502.0
offset_bottom = 104.0
text = "slot 2"

[node name="Slot 3 button" type="Button" parent="start menu"]
layout_mode = 0
offset_left = 149.0
offset_top = 102.0
offset_right = 500.0
offset_bottom = 139.0
text = "slot 3
"

[node name="Slot 4 button" type="Button" parent="start menu"]
layout_mode = 0
offset_left = 150.0
offset_top = 136.0
offset_right = 501.0
offset_bottom = 167.0
text = "slot 4"

[node name="Slot 5 button" type="Button" parent="start menu"]
layout_mode = 0
offset_left = 150.0
offset_top = 166.0
offset_right = 501.0
offset_bottom = 197.0
text = "slot 5"

[node name="SlotConfirm" type="ConfirmationDialog" parent="start menu"]
oversampling_override = 1.0

[node name="DeleteConfirm" type="ConfirmationDialog" parent="start menu"]
oversampling_override = 1.0

[node name="StatusLabel" type="Label" parent="start menu"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
